customer side of doctor's appointment done

--- a/customer/templates/customer/appointment.htm
+++ b/customer/templates/customer/appointment.htm
@@ -12,8 +12,8 @@
                 <ul class="list-inline dashboard-menu text-center noBig">
                     <li class="noBig" class="noBig"><a href="/customer/dashboard/">Dashboard</a></li>
                     <li class="noBig" class="noBig"><a href="/customer/order/">Orders</a></li>
-                    <li class="noBig" class="noBig"><a class="active" href="/customer/profile-details/">Profile Details</a></li>
-                    <li class="noBig" class="noBig"><a href="/customer/appointment/">Lab Appointments</a></li>
+                    <li class="noBig"><a href="/customer/doctor-appointment/">Doctor Appointments</a></li>
+                    <li class="noBig " class="noBig"><a class="active" href="/customer/appointment/">Lab Appointments</a></li>
                 </ul>
                 <div class="mt-10 noBig">
                     <nav class="navbar navbar-light bg-light text-center noBig">
