--- a/doctor/templates/doctor/signin.htm
+++ b/doctor/templates/doctor/signin.htm
@@ -54,8 +54,8 @@
               </div>
               <div class="form-group">
                 <label for="inputAvailableDate">Available Date</label>
-                {{ form.available_date}}
-                <p class="help">{{ form.available_date.errors }}</p>
+                {{ form.available_day}}
+                <p class="help">{{ form.available_day.errors }}</p>
               </div>
               <div class="form-group">
                 <label for="inputDescription">Description</label>
