--- a/templates/snippets/doctor.htm
+++ b/templates/snippets/doctor.htm
@@ -80,7 +80,7 @@
                     <i class="tf-ion-android-calendar icon-max"></i> 
                 </div>
                 <dl class="text-center mt-10">
-                    <dt>Available Date:</dt>
+                    <dt>Available Day:</dt>
                     <dd>19 Apr 2020</dd>
                     <dd>18:00:00 - 20:00:00</dd>
                 </dl>
@@ -118,7 +118,7 @@
                     <i class="tf-ion-android-calendar icon-max"></i> 
                 </div>
                 <dl class="text-center">
-                    <dt>Available Date:</dt>
+                    <dt>Available Day:</dt>
                     <dd>19 Apr 2020</dd>
                     <dd>18:00:00 - 20:00:00</dd>
                 </dl>
@@ -156,7 +156,7 @@
                     <i class="tf-ion-android-calendar icon-max"></i> 
                 </div>
                 <dl class="text-center mt-10">
-                    <dt>Available Date:</dt>
+                    <dt>Available Day:</dt>
                     <dd>19 Apr 2020</dd>
                     <dd>18:00:00 - 20:00:00</dd>
                 </dl>
@@ -194,7 +194,7 @@
                     <i class="tf-ion-android-calendar icon-max"></i> 
                 </div>
                 <dl class="text-center mt-10">
-                    <dt>Available Date:</dt>
+                    <dt>Available Day:</dt>
                     <dd>19 Apr 2020</dd>
                     <dd>18:00:00 - 20:00:00</dd>
                 </dl>
