--- a/doctor/templates/doctor/dashboard.htm
+++ b/doctor/templates/doctor/dashboard.htm
@@ -10,59 +10,25 @@
             <div class="col-md-12">
                 <ul class="list-inline dashboard-menu text-center">
                     <li><a class="active" href="/doctor/dashboard/">Dashboard</a></li>
-                    <li><a href="/doctor/order/">Appointments</a></li>
-                    <li><a href="/doctor/profile-details/">Profile Details</a></li>
+                    <li><a href="/doctor/appointmentList/">Appointments</a></li>
+                    <!-- <li><a href="/doctor/profile-details/">Profile Details</a></li> -->
                 </ul>
-                <div class="dashboard-wrapper user-dashboard">
+                <div class="dashboard-wrapper dashboard-user-profile">
                     <div class="media">
-                        <div class="pull-left">
-                            <!-- <img class="media-object user-img" src='/media/'.{{customer_img.image}} alt="Image"> -->
-                            <img class="media-object user-img" src="/media/{{doctor_img.image}} " alt="Profile image of {{doctor.shop_name}}">
+                        <div class="pull-left text-center" href="#!">
+                            <img class="media-object user-img" src="/media/{{doctor_img.image}}" alt="Profile image of {{doctor.shop_name}}">
+                            <!-- <a class="btn btn-main mt-20" data-target="#MyProfileModal" data-toggle="modal">Edit <i class="tf-ion-edit"></i></a> -->
                         </div>
                         <div class="media-body">
-                            <h2 class="media-heading">Welcome {{doctor.full_name}}</h2>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde, iure, est. Sit mollitia est maxime! Eos
-                                cupiditate tempore, tempora omnis. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim, nihil. </p>
-                        </div>
-                    </div>
-                    <div class="total-order mt-20">
-                        <h4>Total Orders</h4>
-                        <div class="table-responsive">
-                            <table class="table">
-                                <thead>
-                                    <tr>
-                                        <th>Order ID</th>
-                                        <th>Product</th>
-                                        <th>Date</th>
-                                        <th>Items</th>
-                                        <th>Total Price</th>
-                                        <th></th>
-                                    </tr>
-                                </thead>
-                                <tbody>
-                                    <tr>
-                                        <td><a href="#!">#252125</a></td>
-                                        <td>medicine</td>
-                                        <td>Mar 25, 2016</td>
-                                        <td>2</td>
-                                        <td>$ 99.00</td>
-                                    </tr>
-                                    <tr>
-                                        <td><a href="#!">#252125</a></td>
-                                        <td>hygenic</td>
-                                        <td>Mar 25, 2016</td>
-                                        <td>2</td>
-                                        <td>$ 99.00</td>
-                                    </tr>
-                                    <tr>
-                                        <td><a href="#!">#252125</a></td>
-                                        <td>device</td>
-                                        <td>Mar 25, 2016</td>
-                                        <td>2</td>
-                                        <td>$ 99.00</td>
-                                    </tr>
-                                </tbody>
-                            </table>
+                            <ul class="user-profile-list">
+                                <h3 class="font-weight-bold ">doctor Details</h3>
+                                <li><span>Full Name:</span>{{doctor.full_name}}</li>
+                                <li><span>Gender:</span>{{doctor.gender}}</li>
+                                <li><span>Email:</span>{{doctor.email}}</li>
+                                <li><span>Phone:</span>{{doctor.contact_number}}</li>
+                                <li><span>Address:</span>{{doctor.address}}</li>
+                            </ul>
+                            <hr>
                         </div>
                     </div>
                 </div>
@@ -70,5 +36,41 @@
         </div>
     </div>
 </section>
+
+<!-- .modal -->
+<div class="modal fade" id="MyProfileModal">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal">×</button> 
+                <h4 class="modal-title">
+                    Edit your profile
+                </h4>                                                             
+                <hr>
+                <div class="media dashboard-wrapper">
+                    <div class="text-center" href="#!">
+                        <img class="media-object user-img" id="profile" src="/media/{{doctor_img.image}}"  alt="Profile image of {{doctor.shop_name}}">
+                        <a href="#x" class="btn btn-transparent mt-20">Change Image</a>
+                    </div>
+                <dl class="dl-horizontal details-list">
+                    <dt class="mt-10">Full Name:</dt>
+                    <dd><input type="text" class="form-control"  placeholder="hari lal yadhab"></dd>
+                    <dt class="mt-10">user Name:</dt>
+                    <dd><input type="text" class="form-control"  placeholder="epharmacy"></dd>
+                    <dt class="mt-10">Email:</dt>
+                    <dd><input type="email" class="form-control"  placeholder="hari.yadhab1234@gmail.com"></dd>
+                    <dt class="mt-10">Address:</dt>
+                    <dd><input type="text" class="form-control"  placeholder="balkumari"></dd>
+                    <dt class="mt-10">Contact No:</dt>
+                    <dd><input type="text" class="form-control"  placeholder="9803678422"></dd>
+                </dl>
+            </div>                         
+            <div class="modal-footer">
+                <button class="btn-css btn btn-primary">Update</button>
+                <button type="button" class="btn-css btn btn-default" data-dismiss="modal">Close</button>                               
+            </div>
+        </div> 
+    </div>                                                                      
+</div>  
 {% include 'snippets/copyright-footer.htm'%}
 {% endblock content %}
