--- a/doctor/templates/doctor/order.htm
+++ b/doctor/templates/doctor/order.htm
@@ -10,8 +10,8 @@
             <div class="col-md-12">
                 <ul class="list-inline dashboard-menu text-center">
                     <li><a href="/doctor/dashboard/">Dashboard</a></li>
-                    <li><a class="active" href="/doctor/order/">Appointments</a></li>
-                    <li><a href="/doctor/profile-details/">Profile Details</a></li>
+                    <li><a class="active" href="/doctor/appointmentList/">Appointments</a></li>
+                    <!-- <li><a href="/doctor/profile-details/">Profile Details</a></li> -->
                 </ul>
                 <div style="margin-top: 20px;">
                     <nav class="navbar navbar-light bg-light text-center">
@@ -26,65 +26,36 @@
                         <table class="table">
                             <thead>
                                 <tr>
-                                    <th>Order ID</th>
-                                    <th>Product</th>
-                                    <th>Date</th>
-                                    <th>Items</th>
+                                    <th>Appointment ID</th>
+                                    <th>Doctor </th>
+                                    <th>Booked Date</th>
+                                    <th>Appointment Fixed Date</th>
                                     <th>Total Price</th>
                                     <th>Status</th>
                                     <th></th>
                                 </tr>
                             </thead>
                             <tbody>
-                                <tr>
-                                    <td>#451231</td>
-                                    <td>medicine</td>
-                                    <td>Mar 25, 2016</td>
-                                    <td>2</td>
-                                    <td>$99.00</td>
-                                    <td id="lol"><span class="label label-info">Processing</span></td>
-                                    <td><span class="btn btn-default" data-target="#changeStatus" data-toggle="modal">Change</span></td>
-                                </tr>
-                                <tr>
-                                    <td>#451231</td>
-                                    <td>device</td>
-                                    <td>Mar 25, 2016</td>
-                                    <td>3</td>
-                                    <td>$150.00</td>
-                                    <td id="lol"><span class="label label-success">Completed</span></td>
-                                    <!-- <td><span class="label label-success">Completed</span></td> -->
-                                    <td><span class="btn btn-default" data-target="#changeStatus" data-toggle="modal">Change</span></td>
-                                </tr>
-                                <tr>
-                                    <td>#451231</td>
-                                    <td>hygenic</td>
-                                    <td>Mar 25, 2016</td>
-                                    <td>3</td>
-                                    <td>$150.00</td>
-                                    <td id="lol2"><span class="label label-danger">Canceled</span></td>
-                                    <!-- <td><span class="label label-danger">Canceled</span></td> -->
-                                    <td><span class="btn btn-default" data-target="#changeStatus" data-toggle="modal">Change</span></td>
-                                </tr>
-                                <tr>
-                                    <td>#451231</td>
-                                    <td>device</td>
-                                    <td>Mar 25, 2016</td>
-                                    <td>2</td>
-                                    <td>$99.00</td>
-                                    <td id="lol3"><span class="label label-info">On Hold</span></td>
-                                    <!-- <td><span class="label label-info">On Hold</span></td> -->
-                                    <td><span class="btn btn-default" data-target="#changeStatus" data-toggle="modal">Change</span></td>
-                                </tr>
-                                <tr>
-                                    <td>#451231</td>
-                                    <td>medicine</td>
-                                    <td>Mar 25, 2016</td>
-                                    <td>3</td>
-                                    <td>$150.00</td>
-                                    <td id="lol4"><span class="label label-warning">Pending</span></td>
-                                    <!-- <td><span class="label label-warning">Pending</span></td> -->
-                                    <td><span class="btn btn-default" data-target="#changeStatus" data-toggle="modal">Change</span></td>
-                                </tr>
+                                {% for appointment in appointments%}
+                                    <tr>
+                                        <td>#{{appointment.id}}</td>
+                                        <td>{{appointment.doctor.full_name}}</td>
+                                        <td>{{appointment.timestamp}}</td>
+                                        <td>{{appointment.fixed_on }}</td>
+                                        <td>${{appointment.doctor.charge}}</td>
+                                        <td id="lol"><span class="label label-info">{{appointment.status}}</span></td>
+                                        <td>
+                                            <!-- {{appointment.payment}} -->
+                                            {% if appointment.payment != True %}
+                                                <a class="btn btn-default" href="/doctor/appointment/cancel/{{appointment.id}}" > Cancel </a>
+                                                <a class="btn btn-default" href="/doctor/payment/{{appointment.id}}" > Make Payment </a>
+                                            {% endif %}
+                                            <span class="btn btn-default" data-target="#changeStatus_{{ forloop.counter0 }}" data-toggle="modal">Details</span>
+                                            <a class="btn btn-default" href="/doctor/appointment/update/{{appointment.id}}/">Fix Appointment</a>
+
+                                        </td>
+                                    </tr>
+                                {% endfor %}
                             </tbody>
                         </table>
                     </div>
@@ -93,34 +64,35 @@
         </div>
     </div>
 </section>
-<!-- .modal -->
-<div class="modal fade" id="changeStatus">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal">×</button> 
-                <h4 class="modal-title">Change Status</h4>   
-                <p class="btn btn-transparent mt-20" id="chooseMe">choose one of the status</p>                                                          
-                <hr>
-                                 <!-- Elements -->
-                                 <div class="dropdown dropdown-slide">
-                                    <button class="dropdown-toggle btn btn-secondary" data-toggle="dropdown" data-hover="dropdown" data-delay="350"
-                                        role="button" aria-haspopup="true" aria-expanded="false">Shop</button>
-                                    <div class="dropdown-menu">
-                                        <div class="row">
-                                            <div class="col-lg-12 col-md-6 mb-sm-3">
-                                                <ul>
-                                                    <li><a href="#">Processing</a></li>
-                                                    <li><a href="#">Completed</a></li>
-                                                    <li><a href="#">Canceled</a></li>
-                                                    <li><a href="#">Hold On</a></li>
-                                                    <li><a href="#">Pending</a></li>
 
-                                                </ul>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div><!-- / Elements -->
+{% for appointment in appointments%}
+<div class="modal fade" id="changeStatus_{{ forloop.counter0 }}">
+    <div class="modal-dialog">
+        <div class="modal-content product-checkout-details">
+            <div class="modal-header block">
+                <button type="button" class="close" data-dismiss="modal">×</button> 
+                <h4 class="widget-title">Detail of appointment</h4> 
+                <hr>
+                <div class="media product-card">
+                    <a class="pull-left" href="product-single.htm">
+                    </a>
+                    <div class="media-body">
+                        <h4 class="media-heading"><a>Patient's Name :</a></h4>
+                       <p class="price">{{appointment.patient_name}}</p>
+
+                       <h4 class="media-heading"><a> Number :</a></h4>
+                       <p class="price">{{appointment.contact_number}}</p>
+
+                       <h4 class="media-heading"> <a> Email :</a></h4>
+                       <p class="price">{{appointment.email}}</p>
+
+                       <h4 class="media-heading"> <a> Address :</a></h4>
+                       <p class="price">{{appointment.address}}</p>
+
+                       <h4 class="media-heading"> <a> Description :</a></h4>
+                       <p class="price">{{appointment.description}}</p>
+                    </div>
+                 </div>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn-css btn btn-secondory" data-dismiss="modal">close</button>                               
@@ -128,6 +100,7 @@
         </div> 
     </div>                                                                      
 </div>  
+{% endfor %} 
 {% include 'snippets/copyright-footer.htm'%}
 <!-- 
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
