--- a/customer/templates/customer/doctor-appointment-list.htm
+++ b/customer/templates/customer/doctor-appointment-list.htm
@@ -5,29 +5,29 @@
 {% include 'snippets/customer-header.htm'%}
 {% include 'snippets/page-header.htm' %}
 
-<section class="user-dashboard page-wrapper">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-12">
-                <ul class="list-inline dashboard-menu text-center">
-                    <li><a href="/customer/dashboard/">Dashboard</a></li>
-                    <li><a href="/customer/order/">Orders</a></li>
-                    <li><a class="active" href="/customer/doctor-appointment/">Doctor Appointments</a></li>
-                    <li><a href="/customer/appointment/">Lab Appointments</a></li>
+<section class="user-dashboard page-wrapper noBig">
+    <div class="container noBig">
+        <div class="row noBig">
+            <div class="col-md-12 noBig">
+                <ul class="list-inline dashboard-menu text-center noBig">
+                    <li class="noBig"><a href="/customer/dashboard/">Dashboard</a></li>
+                    <li class="noBig"><a href="/customer/order/">Orders</a></li>
+                    <li class="noBig"><a class="active" href="/customer/doctor-appointment/">Doctor Appointments</a></li>
+                    <li class="noBig"><a href="/customer/appointment/">Lab Appointments</a></li>
                 </ul>
-                <div style="margin-top: 20px;">
-                    <nav class="navbar navbar-light bg-light text-center">
-                        <form class="form-inline">
+                <div class="mt-10 noBig">
+                    <nav class="navbar navbar-light bg-light text-center noBig">
+                        <form class="form-inline noBig">
                           <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
                           <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
                         </form>
                       </nav>
                 </div>
-                <div class="dashboard-wrapper user-dashboard">
-                    <div class="table-responsive">
-                        <table class="table">
-                            <thead>
-                                <tr>
+                <div class="dashboard-wrapper user-dashboard noBig">
+                    <div class="table-responsive noBig">
+                        <table class="table noBig">
+                            <thead class="noBig">
+                                <tr class="noBig">
                                     <th>Appointment ID</th>
                                     <th>Doctor </th>
                                     <th>Booked Date</th>
@@ -37,9 +37,9 @@
                                     <th></th>
                                 </tr>
                             </thead>
-                            <tbody>
+                            <tbody class="noBig">
                                 {% for appointment in appointments%}
-                                    <tr>
+                                    <tr class="noBig">
                                         <td>#{{appointment.id}}</td>
                                         <td>{{appointment.doctor.full_name}}</td>
                                         <td>{{appointment.timestamp}}</td>
@@ -67,22 +67,22 @@
 <!-- .modal -->
 
 {% for appointment in appointments%}
-<div class="modal fade" id="changeStatus_{{ forloop.counter0 }}">
-    <div class="modal-dialog">
-        <div class="modal-content product-checkout-details">
-            <div class="modal-header block">
+<div class="modal fade noBig" id="changeStatus_{{ forloop.counter0 }}">
+    <div class="modal-dialog noBig">
+        <div class="modal-content product-checkout-details noBig">
+            <div class="modal-header block noBig">
                 <button type="button" class="close" data-dismiss="modal">×</button> 
                 <h4 class="widget-title">Detail of appointment</h4> 
-                    <div class="media-body">
+                    <div class="media-body noBig">
                         <h4 class="media-heading"><a href="product-single.htm">{{appointment.doctor.full_name}}</a></h4>
                         <p class="price"> {{appointment.doctor.specialist}}</p>
                         <p class="price"> {{appointment.doctor.contact_number}}</p>
                     </div>
                 <hr>
-                <div class="media product-card">
+                <div class="media product-card noBig">
                     <a class="pull-left" href="product-single.htm">
                     </a>
-                    <div class="media-body">
+                    <div class="media-body noBig">
                         <h4 class="media-heading"><a>Patient's Name :</a></h4>
                        <p class="price">{{appointment.patient_name}}</p>
 
@@ -100,7 +100,7 @@
                     </div>
                  </div>
             </div>
-            <div class="modal-footer">
+            <div class="modal-footer noBig">
                 <button type="button" class="btn-css btn btn-secondory" data-dismiss="modal">close</button>                               
             </div>
         </div> 
