--- a/medicalapp/templates/medicalapp/index.htm
+++ b/medicalapp/templates/medicalapp/index.htm
@@ -5,36 +5,36 @@
 {% include 'snippets/header.htm'%}
 {%include 'snippets/prescription.htm' %}
 <!-- slider -->
-<div class="hero-slider noHeight">
-	<div class="slider-item th-fullpage hero-area noHeight" style="background-image: url('static/images/slider/slider-1.jpg');">
-		<div class="container noHeight">
-			<div class="row noHeight">
-				<div class="col-lg-8 text-center noHeight">
+<div class="hero-slider noBig">
+	<div class="slider-item th-fullpage hero-area noBig" style="background-image: url('static/images/slider/slider-1.jpg');">
+		<div class="container noBig">
+			<div class="row noBig">
+				<div class="col-lg-8 text-center noBig">
 					<p class="noHeight" data-duration-in=".3" data-animation-in="fadeInUp" data-delay-in=".1">SHOP</p>
 					<h1 class="noHeight" data-duration-in=".3" data-animation-in="fadeInUp" data-delay-in=".5">Get experience of your <br> online Pharmacy.</h1>
-					<a class="noHeight" data-duration-in=".3" data-animation-in="fadeInUp" data-delay-in=".8" class="btn" href="/customer/login">Shop Now</a>
+					<a class="noHeight" data-duration-in=".3" data-animation-in="fadeInUp" data-delay-in=".8" class="btn noBig" href="/customer/login">Shop Now</a>
 				</div>
 			</div>
 		</div>
 	</div>
-	<div class="slider-item th-fullpage hero-area noHeight" style="background-image: url('static/images/slider/slider-2.jpg');" >
-		<div class="container noHeight">
-			<div class="row noHeight">
-				<div class="col-lg-8 text-left noHeight">
+	<div class="slider-item th-fullpage hero-area noBig" style="background-image: url('static/images/slider/slider-2.jpg');" >
+		<div class="container noBig">
+			<div class="row noBig">
+				<div class="col-lg-8 text-left noBig">
 					<p class="noHeight" data-duration-in=".3" data-animation-in="fadeInUp" data-delay-in=".1">DOCTOR</p>
 					<h1 class="noHeight" data-duration-in=".3" data-animation-in="fadeInUp" data-delay-in=".5">Book for doctor Consultation<br> with just one click.</h1>
-					<a class="noHeight" data-duration-in=".3" data-animation-in="fadeInUp" data-delay-in=".8" class="btn" href="/doctor">Doctor Consultation</a>
+					<a class="noHeight" data-duration-in=".3" data-animation-in="fadeInUp" data-delay-in=".8" class="btn noBig" href="/doctor">Doctor Consultation</a>
 				</div>
 			</div>
 		</div>
 	</div>
-	<div class="slider-item th-fullpage hero-area noHeight" style="background-image: url('static/images/slider/slider-3.jpg');" >
-		<div class="container noHeight">
-			<div class="row noHeight">
-				<div class="col-lg-8 text-right noHeight">
+	<div class="slider-item th-fullpage hero-area noBig" style="background-image: url('static/images/slider/slider-3.jpg');" >
+		<div class="container noBig">
+			<div class="row noBig">
+				<div class="col-lg-8 text-right noBig">
 					<p class="noHeight"data-duration-in=".3" data-animation-in="fadeInUp" data-delay-in=".1">LAB</p>
 					<h1 class="noHeight"data-duration-in=".3" data-animation-in="fadeInUp" data-delay-in=".5">lab reports and booking are <br> just a form away.</h1>
-					<a class="noHeight"data-duration-in=".3" data-animation-in="fadeInUp" data-delay-in=".8" class="btn" href="#">lab test</a>
+					<a class="noHeight"data-duration-in=".3" data-animation-in="fadeInUp" data-delay-in=".8" class="btn noBig" href="#">lab test</a>
 				</div>
 			</div>
 		</div>
