--- a/templates/snippets/customer-header.htm
+++ b/templates/snippets/customer-header.htm
@@ -1,7 +1,7 @@
 {% load static %}
 {% include 'snippets/accessibility_modal.htm'%}
 <!-- Start Top Header Bar -->
-<section class="top-header noBig">
+<section class="top-header noBig sticky">
     <div class="container noBig">
         <div class="col-md-12 noBig">
             <!-- Site Logo -->
